# socks5

./: CMakeLists.txt  README.md  calc_server5.cp  server.cpp  test  отчет_палас.docx
client/: CMakeLists.txt  README.md  client.cpp  client.hpp  main.cpp  server.cpp  socks5.hpp  socks5Client.cpp  spawn.hpp
client/prev_version/: client.cpp
server/: README.md  main.cpp  server.cpp  server.hpp  session.hpp  test
server/testVersion/: CMakeLists.txt  main.cpp  proxy5.cpp  proxy5.hpp  session.hpp
